# forge

./: .gitignore  Forge.icns  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src-ui/src/: App.tsx  App.vue  style.css
src-ui/src/components/: Editor.tsx  Editor.vue  FileTreeItem.vue  SettingsModal.tsx  SettingsModal.vue  Sidebar.tsx  Sidebar.vue
src-ui/src/components/editor/: EditorToolbar.vue  ImageNode.vue  MetadataPanel.vue  image-extension.ts
src/components/: Editor.tsx  Sidebar.tsx  Toolbar.tsx
