[package]
name = "forge"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
walkdir = "2"
base64 = "0.21"
hmac = "0.12"
sha1 = "0.10"
hex = "0.4"
chrono = "0.4"
urlencoding = "2"
dotenv = "0.15"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-store = "2.4.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `custom-protocol` feature
custom-protocol = ["tauri/custom-protocol"]
